Fix size of input hidden behind the custom checkbox (#124)
Why:
* It was too small so it didn't overlap the whole box and it was possible to click in most of the box without having any effect

How:
* By setting width and height for the input that match the control box

--- a/frontend/src/components/Checkbox/index.module.css
+++ b/frontend/src/components/Checkbox/index.module.css
@@ -12,6 +12,8 @@
 
 .input {
   position: absolute;
+  width: var(--size-checkbox);
+  height: var(--size-checkbox);
   opacity: 0;
 }
 
